# libxcf

./: CMakeLists.txt  LICENSE  README.md  state.dot  xcf.c  xcf.h  xcf_names.c  xcf_names.h
